--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: aquamarine;
-    background: url("https://images4.alphacoders.com/921/921616.jpg") no-repeat center center fixed;
+    background: url("https://www.plateforme-fitness.fr/wp-content/uploads/2019/06/fitness-2.jpg") no-repeat center center fixed;
     background-size: cover;
     margin: 0;
     font-family: Arial, sans-serif;
